# Megent

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  audit.py  chat.json  exceptions.py  identity.py  main.py  megent.yaml  pyproject.toml  requirements.txt
example/: all_features_showcase.py  megent_simple.py
example/megent/: xpo.json
megent/: __init__.py  awareness.py  basic_usage.py  budget.py  cli.py  exceptions.py  guard.py  hitl.py  identity.py  pii.py  policy.py  registry.py  runtime.py  stop.py
megent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
policy-workspace/: README.md
policy-workspace/docs/: policy-format.md
policy-workspace/examples/: load_policy.py
policy-workspace/policies/: read-only.yaml
tests/: test_cli.py  test_lifecycle_runtime.py  test_policy_registry.py  test_policy_resolution.py  test_registry.py  test_runtime_wrapping.py
