[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "megent"
version = "0.1.0"
description = "AI agent security middleware — policy-enforced tool call interception"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["ai", "agents", "security", "policy", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
jwt = ["pyjwt>=2.8"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pyjwt>=2.8",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://megent.dev"
Repository = "https://github.com/getmagent/megent"
Documentation = "https://megent.dev/docs"

[tool.setuptools.packages.find]
include = ["megent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
