[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "megent"
version = "0.2.0"
description = "Open-source AI agent security middleware for policy-enforced tool calls, prompt injection defense, and PII masking"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = [
    "ai",
    "agent-security",
    "llm-security",
    "policy-enforcement",
    "prompt-injection",
    "tool-security",
    "pii-masking",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "cryptography>=42.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
jwt = ["pyjwt>=2.8"]
dev = [
    "cryptography>=42.0",
    "pytest>=8.0",
    "pytest-cov",
    "pyjwt>=2.8",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://megent.dev"
Repository = "https://github.com/Megents"
Documentation = "https://docs.megent.dev"

[project.scripts]
megent = "megent.cli:main"

[tool.setuptools.packages.find]
include = ["megent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
